--- a/jenislayanan.html
+++ b/jenislayanan.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="../assets/icon.png" />
-    <link rel="stylesheet" href="../css/admin.css" />
+    <link rel="stylesheet" href="css/admin.css" />
     <!-- Boxicons CDN Link -->
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
